--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <main class="wrapper">
+        <u><h1>PRACTICANDO CON RENATO GITHUB</h1></u>
+
+        <div class="containt_img">
+            <img class="img_spiderman" src="./img/spiderman.jpg" alt="">
+        </div>
+    </main>
 </body>
 </html>
