--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <u><h1>PRACTICANDO CON RENATO GITHUB</h1></u>
 
         <div class="containt_img">
+            <h1>spiderman</h1>
             <img class="img_spiderman" src="./img/spiderman.jpg" alt="">
         </div>
     </main>
