cambios rama-daniel

--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
         <u><h1>PRACTICANDO CON RENATO GITHUB</h1></u>
 
         <div class="containt_img">
-            <img class="img_spiderman" src="./img/spiderman.jpg" alt="">
+            <div class="containt_title_spiderman">
+                <h1>Hola Spiderman!!!!</h1>
+            </div>
+            <div class="box_img">
+                <img class="img_spiderman" src="./img/spiderman.jpg" alt="">
+            </div>
         </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim veritatis quaerat saepe quo fuga sunt tempora ea. Eum vero vitae perferendis sunt nam, magnam harum provident porro quo minima enim?
+        Quod sed quis, adipisci id molestias ratione minima atque nisi, quo sapiente ex unde amet impedit. Officia nesciunt reiciendis blanditiis? Ratione enim modi sapiente incidunt asperiores impedit neque omnis? Sunt.
+        Tenetur eum natus placeat quaerat laudantium velit totam veritatis distinctio? Quisquam deserunt molestiae culpa earum voluptatibus inventore tempora, natus, at deleniti modi saepe consequuntur provident, est consequatur. Repellendus, sint similique!
+        Placeat, suscipit blanditiis veritatis itaque quaerat praesentium sit perferendis iusto minus quos ex consequuntur, aliquid quidem mollitia nemo molestiae alias! Error temporibus odio maiores voluptas sit, eaque molestiae vel dolores!
+        Nemo illo eum, placeat numquam nesciunt laboriosam quisquam odit iusto libero explicabo, fuga voluptatum neque commodi, in earum labore dicta sit dolores? Soluta alias amet, nisi voluptatum consequatur repellendus voluptates.
+        Quaerat delectus necessitatibus qui laudantium eveniet accusamus? Ullam sint obcaecati ipsam vero aspernatur adipisci distinctio pariatur, aliquid veniam iure, quas vitae fuga rem facere saepe magni optio placeat recusandae excepturi.
+        Ipsam dolore sunt sapiente inventore animi nulla voluptate expedita. Et harum optio tenetur enim quidem deleniti consectetur accusantium temporibus, impedit numquam sint minus quas repellat minima nihil, tempore itaque aperiam.
+        Fugiat, rem omnis. A aperiam, suscipit laudantium odio officia at quaerat debitis sint nemo beatae accusantium, ducimus dolores labore fugiat repudiandae doloribus modi nesciunt consequuntur laborum ipsa necessitatibus animi! Nostrum.
+        Id delectus, ab cumque eaque distinctio maiores, consequatur ipsam voluptatum, aspernatur facere corrupti nemo earum saepe praesentium rerum veritatis quaerat quia? Inventore natus eos assumenda quae soluta ut repudiandae quas!
+        Quae odio at a voluptatibus recusandae, sit quo repudiandae eligendi saepe nemo iure et magnam assumenda dolore quam eius aliquam veritatis. Autem at cupiditate dolores. Similique quod nihil reprehenderit aliquam.</p>
     </main>
 </body>
 </html>
