--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
     <main class="wrapper">
         <u><h1>PRACTICANDO CON RENATO GITHUB</h1></u>
-
         <div class="containt_img">
             <div class="containt_title_spiderman">
                 <h1>Hola Spiderman!!!!</h1>
             </div>
             <div class="box_img">
-                <img class="img_spiderman" src="./img/spiderman.jpg" alt="">
+                <img class="img_spiderman" src="https://image.api.playstation.com/vulcan/img/rnd/202011/0714/Cu9fyu6DM41JPekXLf1neF9r.png" alt="">
             </div>
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim veritatis quaerat saepe quo fuga sunt tempora ea. Eum vero vitae perferendis sunt nam, magnam harum provident porro quo minima enim?
