--- a/practica.html
+++ b/practica.html
@@ -13,6 +13,7 @@
             <li><a href="Inicio.html">Inicio</a></li>
             <li><a href="Nosotros.html">Nosotros</a></li>
             <li><a href="Contáctanos.html">Contáctanos</a></li>
+            <li><a href="formulario.html">FORMULARIO</a></li>
         </ol>
     </header>
   </body>
